feat: Tests for headers
